add jwt scope verification

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Large: DEBUG/FILTER",
             "type": "python",
             "request": "launch",
-            "program": "o365sr.py",
+            "program": "graphunter.py",
             "console": "integratedTerminal",
             "justMyCode": true,
             "preLaunchTask": "cleanup",
@@ -18,7 +18,7 @@
             "name": "Large: NONDEBUG/FILTER",
             "type": "python",
             "request": "launch",
-            "program": "o365sr.py",
+            "program": "graphunter.py",
             "console": "integratedTerminal",
             "justMyCode": true,
             "preLaunchTask": "cleanup",
@@ -28,7 +28,7 @@
             "name": "Large DEBUG/NOFILTER",
             "type": "python",
             "request": "launch",
-            "program": "o365sr.py",
+            "program": "graphunter.py",
             "console": "integratedTerminal",
             "justMyCode": true,
             "preLaunchTask": "cleanup",
@@ -38,7 +38,7 @@
             "name": "Large NONDEBUG/NOFILTER",
             "type": "python",
             "request": "launch",
-            "program": "o365sr.py",
+            "program": "graphunter.py",
             "console": "integratedTerminal",
             "justMyCode": true,
             "preLaunchTask": "cleanup",
@@ -48,7 +48,7 @@
             "name": "Medium DEBUG/NOFILTER",
             "type": "python",
             "request": "launch",
-            "program": "o365sr.py",
+            "program": "graphunter.py",
             "console": "integratedTerminal",
             "justMyCode": true,
             "preLaunchTask": "cleanup",
@@ -58,7 +58,7 @@
             "name": "Medium DEBUG/FILTER",
             "type": "python",
             "request": "launch",
-            "program": "o365sr.py",
+            "program": "graphunter.py",
             "console": "integratedTerminal",
             "justMyCode": true,
             "preLaunchTask": "cleanup",
@@ -68,7 +68,7 @@
             "name": "Small: NODEBUG/FILTER",
             "type": "python",
             "request": "launch",
-            "program": "o365sr.py",
+            "program": "graphunter.py",
             "console": "integratedTerminal",
             "justMyCode": true,
             "preLaunchTask": "cleanup",
@@ -83,7 +83,7 @@
             "name": "Small: NODEBUG/NOFILTER",
             "type": "python",
             "request": "launch",
-            "program": "o365sr.py",
+            "program": "graphunter.py",
             "console": "integratedTerminal",
             "justMyCode": true,
             "preLaunchTask": "cleanup",
