--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "console": "integratedTerminal",
             "justMyCode": true,
             "preLaunchTask": "cleanup",
-            "args": "-debug -jwt -keywords password,password123231,secret -a -f ./filter.txt"
+            "args": "-debug -jwt -keywords *password*,password123231,*secret* -a -f ./filter.txt"
         },
         {
             "name": "Large: NONDEBUG/FILTER",
@@ -22,7 +22,7 @@
             "console": "integratedTerminal",
             "justMyCode": true,
             "preLaunchTask": "cleanup",
-            "args": "-jwt -keywords password,password123231,secret -a -f ./filter.txt"
+            "args": "-jwt -keywords *password*,password123231,*secret* -a -f ./filter.txt"
         },
         {
             "name": "Large DEBUG/NOFILTER",
