--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "console": "integratedTerminal",
             "justMyCode": true,
             "preLaunchTask": "cleanup",
-            "args": "-debug -jwt -keywords *password*,password123231,*secret* -a -f ./filter.txt"
+            "args": "-debug -auth jwt -keywords *password*,password123231,*secret* -a -f ./filter.txt"
         },
         {
             "name": "Large: NONDEBUG/FILTER",
@@ -22,7 +22,7 @@
             "console": "integratedTerminal",
             "justMyCode": true,
             "preLaunchTask": "cleanup",
-            "args": "-jwt -keywords *password*,password123231,*secret* -a -f ./filter.txt"
+            "args": "-auth jwt -keywords *password*,password123231,*secret* -a -f ./filter.txt"
         },
         {
             "name": "Large DEBUG/NOFILTER",
@@ -32,7 +32,7 @@
             "console": "integratedTerminal",
             "justMyCode": true,
             "preLaunchTask": "cleanup",
-            "args": "-debug -jwt -keywords password,password123231,secret -a"
+            "args": "-debug -auth jwt -keywords password,password123231,secret -a"
         },
         {
             "name": "Large NONDEBUG/NOFILTER",
@@ -42,7 +42,7 @@
             "console": "integratedTerminal",
             "justMyCode": true,
             "preLaunchTask": "cleanup",
-            "args": "-jwt -keywords password,password123231,secret -a"
+            "args": "-auth jwt -keywords password,password123231,secret -a"
         },
         {
             "name": "Medium DEBUG/NOFILTER",
@@ -52,7 +52,7 @@
             "console": "integratedTerminal",
             "justMyCode": true,
             "preLaunchTask": "cleanup",
-            "args": "-debug -jwt -keywords password123231,secret -a"
+            "args": "-debug -auth jwt -keywords password123231,secret -a"
         },
         {
             "name": "Medium DEBUG/FILTER",
@@ -62,7 +62,7 @@
             "console": "integratedTerminal",
             "justMyCode": true,
             "preLaunchTask": "cleanup",
-            "args": "-debug -jwt -keywords password123231,secret -a -f ./filter.txt"
+            "args": "-debug -auth jwt -keywords password123231,secret -a -f ./filter.txt"
         },
         {
             "name": "Small: NODEBUG/FILTER",
@@ -73,11 +73,11 @@
             "justMyCode": true,
             "preLaunchTask": "cleanup",
             // some log
-            //"args": " -jwt -keywords b540be4b7ec48d0dd7512c8d8df9399d6bf84d76 -a -d -f"
+            //"args": " -auth jwt -keywords b540be4b7ec48d0dd7512c8d8df9399d6bf84d76 -a -d -f"
             // my onedrive file
-            //"args": " -jwt -keywords 75305aae9aa1c10cddca91628ed4361f -a -d -f"
+            //"args": " -auth jwt -keywords 75305aae9aa1c10cddca91628ed4361f -a -d -f"
             // both
-            "args": "-jwt -keywords 75305aae9aa1c10cddca91628ed4361f,b540be4b7ec48d0dd7512c8d8df9399d6bf84d76 -a -f ./filter.txt"
+            "args": "-auth jwt -keywords 75305aae9aa1c10cddca91628ed4361f,b540be4b7ec48d0dd7512c8d8df9399d6bf84d76 -a -f ./filter.txt"
         },
         {
             "name": "Small: NODEBUG/NOFILTER",
@@ -88,11 +88,26 @@
             "justMyCode": true,
             "preLaunchTask": "cleanup",
             // some log
-            //"args": " -jwt -keywords b540be4b7ec48d0dd7512c8d8df9399d6bf84d76 -a -d -f"
+            //"args": " -auth jwt -keywords b540be4b7ec48d0dd7512c8d8df9399d6bf84d76 -a -d -f"
             // my onedrive file
-            //"args": " -jwt -keywords 75305aae9aa1c10cddca91628ed4361f -a -d -f"
+            //"args": " -auth jwt -keywords 75305aae9aa1c10cddca91628ed4361f -a -d -f"
             // both
-            "args": "-jwt -keywords 75305aae9aa1c10cddca91628ed4361f,b540be4b7ec48d0dd7512c8d8df9399d6bf84d76 -a"
+            "args": "-auth jwt -keywords 75305aae9aa1c10cddca91628ed4361f,b540be4b7ec48d0dd7512c8d8df9399d6bf84d76 -a"
+        },
+        {
+            "name": "APPREG: Small: NODEBUG/NOFILTER",
+            "type": "python",
+            "request": "launch",
+            "program": "graphunter.py",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "preLaunchTask": "cleanup",
+            // some log
+            //"args": " -auth jwt -keywords b540be4b7ec48d0dd7512c8d8df9399d6bf84d76 -a -d -f"
+            // my onedrive file
+            //"args": " -auth jwt -keywords 75305aae9aa1c10cddca91628ed4361f -a -d -f"
+            // both
+            "args": "-auth appreg -keywords 75305aae9aa1c10cddca91628ed4361f,b540be4b7ec48d0dd7512c8d8df9399d6bf84d76 -a"
         },
         {
             "name": "Small: DEBUG/NOFILTER/DL",
@@ -103,11 +118,11 @@
             "justMyCode": true,
             "preLaunchTask": "cleanup",
             // some log
-            //"args": " -jwt -keywords b540be4b7ec48d0dd7512c8d8df9399d6bf84d76 -a -d -f"
+            //"args": " -auth jwt -keywords b540be4b7ec48d0dd7512c8d8df9399d6bf84d76 -a -d -f"
             // my onedrive file
-            //"args": " -jwt -keywords 75305aae9aa1c10cddca91628ed4361f -a -d -f"
+            //"args": " -auth jwt -keywords 75305aae9aa1c10cddca91628ed4361f -a -d -f"
             // both
-            "args": "-jwt -dl -debug -keywords 75305aae9aa1c10cddca91628ed4361f,b540be4b7ec48d0dd7512c8d8df9399d6bf84d76 -a"
+            "args": "-auth jwt -dl -debug -keywords 75305aae9aa1c10cddca91628ed4361f,b540be4b7ec48d0dd7512c8d8df9399d6bf84d76 -a"
         }
     ]
 }
